
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u32 ;
struct radeon_device {int dummy; } ;


 scalar_t__ AFMT_AUDIO_PACKET_CONTROL ;
 scalar_t__ ASIC_IS_DCE3 (struct radeon_device*) ;
 scalar_t__ ASIC_IS_DCE32 (struct radeon_device*) ;
 int CNTX_BUSY_INT_ENABLE ;
 int CNTX_EMPTY_INT_ENABLE ;
 scalar_t__ CP_INT_CNTL ;
 scalar_t__ D1GRPH_INTERRUPT_CONTROL ;
 scalar_t__ D2GRPH_INTERRUPT_CONTROL ;
 scalar_t__ DACA_AUTODETECT_INT_CONTROL ;
 scalar_t__ DACB_AUTODETECT_INT_CONTROL ;
 scalar_t__ DCE3_DACA_AUTODETECT_INT_CONTROL ;
 scalar_t__ DCE3_DACB_AUTODETECT_INT_CONTROL ;
 scalar_t__ DCE3_HDMI1_AUDIO_PACKET_CONTROL ;
 scalar_t__ DCE3_HDMI_OFFSET0 ;
 scalar_t__ DCE3_HDMI_OFFSET1 ;
 scalar_t__ DC_HOT_PLUG_DETECT1_INT_CONTROL ;
 scalar_t__ DC_HOT_PLUG_DETECT2_INT_CONTROL ;
 scalar_t__ DC_HOT_PLUG_DETECT3_INT_CONTROL ;
 int DC_HOT_PLUG_DETECTx_INT_POLARITY ;
 scalar_t__ DC_HPD1_INT_CONTROL ;
 scalar_t__ DC_HPD2_INT_CONTROL ;
 scalar_t__ DC_HPD3_INT_CONTROL ;
 scalar_t__ DC_HPD4_INT_CONTROL ;
 scalar_t__ DC_HPD5_INT_CONTROL ;
 scalar_t__ DC_HPD6_INT_CONTROL ;
 int DC_HPDx_INT_POLARITY ;
 scalar_t__ DMA_CNTL ;
 scalar_t__ DxMODE_INT_MASK ;
 scalar_t__ GRBM_INT_CNTL ;
 scalar_t__ HDMI0_AUDIO_PACKET_CONTROL ;
 int HDMI0_AZ_FORMAT_WTRIG_MASK ;
 scalar_t__ HDMI1_AUDIO_PACKET_CONTROL ;
 int RREG32 (scalar_t__) ;
 int TRAP_ENABLE ;
 int WREG32 (scalar_t__,int) ;

__attribute__((used)) static void r600_disable_interrupt_state(struct radeon_device *rdev)
{
 u32 tmp;

 WREG32(CP_INT_CNTL, CNTX_BUSY_INT_ENABLE | CNTX_EMPTY_INT_ENABLE);
 tmp = RREG32(DMA_CNTL) & ~TRAP_ENABLE;
 WREG32(DMA_CNTL, tmp);
 WREG32(GRBM_INT_CNTL, 0);
 WREG32(DxMODE_INT_MASK, 0);
 WREG32(D1GRPH_INTERRUPT_CONTROL, 0);
 WREG32(D2GRPH_INTERRUPT_CONTROL, 0);
 if (ASIC_IS_DCE3(rdev)) {
  WREG32(DCE3_DACA_AUTODETECT_INT_CONTROL, 0);
  WREG32(DCE3_DACB_AUTODETECT_INT_CONTROL, 0);
  tmp = RREG32(DC_HPD1_INT_CONTROL) & DC_HPDx_INT_POLARITY;
  WREG32(DC_HPD1_INT_CONTROL, tmp);
  tmp = RREG32(DC_HPD2_INT_CONTROL) & DC_HPDx_INT_POLARITY;
  WREG32(DC_HPD2_INT_CONTROL, tmp);
  tmp = RREG32(DC_HPD3_INT_CONTROL) & DC_HPDx_INT_POLARITY;
  WREG32(DC_HPD3_INT_CONTROL, tmp);
  tmp = RREG32(DC_HPD4_INT_CONTROL) & DC_HPDx_INT_POLARITY;
  WREG32(DC_HPD4_INT_CONTROL, tmp);
  if (ASIC_IS_DCE32(rdev)) {
   tmp = RREG32(DC_HPD5_INT_CONTROL) & DC_HPDx_INT_POLARITY;
   WREG32(DC_HPD5_INT_CONTROL, tmp);
   tmp = RREG32(DC_HPD6_INT_CONTROL) & DC_HPDx_INT_POLARITY;
   WREG32(DC_HPD6_INT_CONTROL, tmp);
   tmp = RREG32(AFMT_AUDIO_PACKET_CONTROL + DCE3_HDMI_OFFSET0) & ~HDMI0_AZ_FORMAT_WTRIG_MASK;
   WREG32(AFMT_AUDIO_PACKET_CONTROL + DCE3_HDMI_OFFSET0, tmp);
   tmp = RREG32(AFMT_AUDIO_PACKET_CONTROL + DCE3_HDMI_OFFSET1) & ~HDMI0_AZ_FORMAT_WTRIG_MASK;
   WREG32(AFMT_AUDIO_PACKET_CONTROL + DCE3_HDMI_OFFSET1, tmp);
  } else {
   tmp = RREG32(HDMI0_AUDIO_PACKET_CONTROL) & ~HDMI0_AZ_FORMAT_WTRIG_MASK;
   WREG32(HDMI0_AUDIO_PACKET_CONTROL, tmp);
   tmp = RREG32(DCE3_HDMI1_AUDIO_PACKET_CONTROL) & ~HDMI0_AZ_FORMAT_WTRIG_MASK;
   WREG32(DCE3_HDMI1_AUDIO_PACKET_CONTROL, tmp);
  }
 } else {
  WREG32(DACA_AUTODETECT_INT_CONTROL, 0);
  WREG32(DACB_AUTODETECT_INT_CONTROL, 0);
  tmp = RREG32(DC_HOT_PLUG_DETECT1_INT_CONTROL) & DC_HOT_PLUG_DETECTx_INT_POLARITY;
  WREG32(DC_HOT_PLUG_DETECT1_INT_CONTROL, tmp);
  tmp = RREG32(DC_HOT_PLUG_DETECT2_INT_CONTROL) & DC_HOT_PLUG_DETECTx_INT_POLARITY;
  WREG32(DC_HOT_PLUG_DETECT2_INT_CONTROL, tmp);
  tmp = RREG32(DC_HOT_PLUG_DETECT3_INT_CONTROL) & DC_HOT_PLUG_DETECTx_INT_POLARITY;
  WREG32(DC_HOT_PLUG_DETECT3_INT_CONTROL, tmp);
  tmp = RREG32(HDMI0_AUDIO_PACKET_CONTROL) & ~HDMI0_AZ_FORMAT_WTRIG_MASK;
  WREG32(HDMI0_AUDIO_PACKET_CONTROL, tmp);
  tmp = RREG32(HDMI1_AUDIO_PACKET_CONTROL) & ~HDMI0_AZ_FORMAT_WTRIG_MASK;
  WREG32(HDMI1_AUDIO_PACKET_CONTROL, tmp);
 }
}
